Add parameter ETCD_QUOTA_BYTES

--- a/app/locale/en.json
+++ b/app/locale/en.json
@@ -16,11 +16,12 @@
   "Memory": "Memory",
   "Count":"Count",
   "VxNet": "Virtual private network",
-  "VolumeClassDes":"",
   "InstanceClassDescrip":"The instance type for the cluster to run，such as high performance，high performance plus",
   "InstanceClassLabel":"Instance Class",
   "etcautocompact":"etcd autocompact",
   "etcdautocompactdescrip":"etcd autocompact, 0 for disable",
+  "etcd.quota.backend.bytes": "etcd quota-backend-bytes",
+  "etcdquotabytesdescrip": "8GB is a suggested maximum size for normal environments and etcd warns at startup if the configured value exceeds it",
   "VolumeClassDes":"The volume type for the cluster to run，such as high performance，high performance plus",
   "VolumeClasslabel":"Volume Class",
   "enableCorednsdescript":"Enable coredns server,please allocate at least one proxy node before enable coredns",
