--- a/app/locale/zh-cn.json
+++ b/app/locale/zh-cn.json
@@ -50,5 +50,7 @@
   "process_resident_memory_bytes": "驻留内存（RSS）字节数",
   "process_virtual_memory_bytes": "虚拟内存字节数",
   "corednslb": "coredns负载均衡器",
-  "corednslbdescript": "给coredns服务的负载均衡器，端口为53"
+  "corednslbdescript": "给coredns服务的负载均衡器，端口为53",
+  "nodeexporterdescrip": "开启nodeexporter， 可以监控服务器CPU、内存、磁盘、I/O等信息",
+  "node.exporter": "node_exporter"
 }
